add_library(glfw STATIC IMPORTED GLOBAL)

set_property(TARGET glfw
	PROPERTY INTERFACE_INCLUDE_DIRECTORIES
	${CMAKE_CURRENT_SOURCE_DIR}/include)
set_property(TARGET glfw
	PROPERTY IMPORTED_LOCATION_RELEASE
	${CMAKE_CURRENT_SOURCE_DIR}/Release/glfw3.lib)
set_property(TARGET glfw
	PROPERTY IMPORTED_LOCATION_DEBUG
	${CMAKE_CURRENT_SOURCE_DIR}/Debug/glfw3.lib)
